# mcp_excel_office

./: .dockerignore  .dxtignore  .env.example  .gitignore  .mcpbignore  .pre-commit-config.yaml  Docker.md  Dockerfile  GEMINI.md  README.md  TOOLS.md  WARP.md  format.py  main.py  manifest.json  mcp_server.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  scripts.py
.windsurf/rules/: estructure.md  rules.md  tests.md
mcp_excel_server/: main.py
mcp_excel_server/core/: __init__.py  calculations.py  chart.py  data.py  db_conection.py  formatting.py  pivot.py  workbook.py
mcp_excel_server/tools/: __init__.py  content_tools.py  db_tools.py  excel_tools.py  format_tools.py  formulas_excel_tools.py  graphics_tools.py
mcp_excel_server/utils/: __init__.py  cell_utils.py  file_utils.py  sheet_utils.py  validation_utils.py
src/: __init__.py  mcp_server.py
src/mcp_excel/: __init__.py  __main__.py  config.py  main.py  server.py
src/mcp_excel/config/: __init__.py  mcp_excel_config.json
src/mcp_excel/core/: __init__.py  calculations.py  chart.py  data.py  db_conection.py  exceptions.py  formatting.py  pivot.py  workbook.py
src/mcp_excel/exceptions/: __init__.py  exception_core.py  exception_tools.py
src/mcp_excel/tools/: __init__.py  content_tools.py  db_tools.py  excel_tools.py  exceptions.py  format_tools.py  formulas_excel_tools.py  graphics_tools.py  register_tools.py
src/mcp_excel/utils/: __init__.py  cell_utils.py  db_config_utils.py  file_utils.py  sheet_utils.py  validation_utils.py
tests/: conftest.py  test_cell_utils.py  test_config.py  test_config_validation.py  test_content_tools.py  test_context_managers.py  test_data.py  test_db_tools.py  test_excel_tools.py  test_file_security.py  test_file_utils.py  test_format_tools.py  test_formula_security.py  test_formulas_excel_tools.py  test_graphics_tools.py  test_pivot.py  test_workbook.py
