[project]
name = "mcp-office-excel"
version = "1.0.0"
description = "Excel server for processing Excel files."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "LuiccianDev", email = "luicciandev@gmail.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "excel", "office", "document-processing", "xlsx", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.12.2",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.10",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/LuiccianDev/mcp_excel_office"
Repository = "https://github.com/LuiccianDev/mcp_excel_office"
Documentation = "https://github.com/LuiccianDev/mcp_excel_office/blob/master/README.md"
issues = "https://github.com/LuiccianDev/mcp_excel_office/issues"
Changelog = "https://github.com/LuiccianDev/mcp_excel_office/blob/master/CHANGELOG.md"



# uv add --dev modulo
[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

# Configuración de MyPy (verificador de tipos)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true # Usar el type: ignore[misc] al inicio de la linea siguiente del decorador validate_file_access
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["tests/", "build", ".venv"]
files = ["src"]


# configuarcionde pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
asyncio_mode = "auto"
# Configuración de cobertura (pytest-cov)
addopts = [
    "--cov=src/mcp_excel/tools",     # Directorio a cubrir
    "--cov-report=term-missing",     # Mostrar líneas no cubiertas en terminal
    "--cov-report=html:htmlcov",     # Generar reporte HTML
    "--cov-report=xml:coverage.xml", # Generar reporte XML
    "--cov-fail-under=20",           # Fallar si cobertura < 80%
    "--strict-markers",              # Requerir markers definidos
    "--disable-warnings",            # Deshabilitar warnings por defecto
    "-v",                            # Modo verbose
    "--tb=short"                     # Formato corto de tracebacks
]

# Markers personalizados
markers = [
    "slow: marca tests que tardan mucho en ejecutarse",
    "integration: marca tests de integración",
    "unit: marca tests unitarios",
    "asyncio: marca tests asíncronos",
    "excel: marca tests relacionados con Excel",
    "mcp: marca tests relacionados con MCP"
]

# Filtros de warnings
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    # Agregar warnings específicos si es necesario
]

# Configuración de logging durante tests
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Archivos y directorios a ignorar
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__"
]
[tool.coverage.run]
# Configuración adicional de cobertura
source = ["src/mcp_excel/tools"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
# Configuración del reporte de cobertura
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == '__main__':"
]

[tool.coverage.html]
# Configuración del reporte HTML
directory = "htmlcov"
