[project]
name = "mcp_excel"
version = "1.0.0"
description = "MCP Excel Office Server - Excel manipulation through Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "LuiccianDev", email = "luicciandev@gmail.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "excel", "office", "document-processing", "xlsx", "automation", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.12.2",
    "openpyxl>=3.1.5",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/LuiccianDev/mcp_excel_office"
Repository = "https://github.com/LuiccianDev/mcp_excel_office"
Documentation = "https://github.com/LuiccianDev/mcp_excel_office/blob/master/README.md"
issues = "https://github.com/LuiccianDev/mcp_excel_office/issues"
Changelog = "https://github.com/LuiccianDev/mcp_excel_office/blob/master/CHANGELOG.md"



[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[project.scripts]
mcp_excel = "mcp_excel.__main__:main"

[project.entry-points."mcp.servers"]
mcp_excel = "mcp_excel.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["src/mcp_excel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
